[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Interactable.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Door.gd" type="Script" id=2]

[node name="Door" instance=ExtResource( 1 )]

script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Highlight" parent="." index="2"]

_sections_unfolded = [ "Animation" ]

[node name="StaticBody2D" type="StaticBody2D" parent="." index="3"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="0"]

[node name="TopTrigger" type="Area2D" parent="." index="4"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopTrigger" index="0"]

[node name="BottomTrigger" type="Area2D" parent="." index="5"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomTrigger" index="0"]

[node name="TopStart" type="Node2D" parent="." index="6"]

[node name="TopEnd" type="Node2D" parent="." index="7"]

[node name="BottomStart" type="Node2D" parent="." index="8"]

[node name="BottomEnd" type="Node2D" parent="." index="9"]

[node name="PreTween" type="Tween" parent="." index="10"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Tween" type="Tween" parent="." index="11"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0


